@@ -385,6 +385,7 @@ std::string nameFromPerm(PlayerAccessInfo::AccessPerm perm)
     case PlayerAccessInfo::replay: return "replay";
     case PlayerAccessInfo::requireIdentify: return "requireIdentify";
     case PlayerAccessInfo::say: return "say";
+    case PlayerAccessInfo::sendHelp : return "sendHelp";
     case PlayerAccessInfo::setAll: return "setAll";
     case PlayerAccessInfo::setPassword: return "setPassword";
     case PlayerAccessInfo::setPerms: return "setPerms";
@@ -448,6 +449,7 @@ PlayerAccessInfo::AccessPerm permFromName(const std::string &name)
   if (name == "REPLAY") return PlayerAccessInfo::replay;
   if (name == "REQUIREIDENTIFY") return PlayerAccessInfo::requireIdentify;
   if (name == "SAY") return PlayerAccessInfo::say;
+  if (name == "SENDHELP") return PlayerAccessInfo::sendHelp;
   if (name == "SETALL") return PlayerAccessInfo::setAll;
   if (name == "SETPASSWORD") return PlayerAccessInfo::setPassword;
   if (name == "SETPERMS") return PlayerAccessInfo::setPerms;
